<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_selecet_trip" android:title="@string/action_selecet_trip"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_selecet_trip_user_only" android:title="@string/action_selecet_trip_user_only"
        android:orderInCategory="101" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="104" app:showAsAction="never" />

    <item android:id="@+id/action_quit" android:title="@string/action_quit"
        android:orderInCategory="105" app:showAsAction="never" />

    <item android:id="@+id/action_logout" android:title="@string/action_logout"
        android:orderInCategory="106" app:showAsAction="never" />
</menu>
