<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/username_register"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_edit_text"
        android:textCursorDrawable="@null"
        android:padding="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="14dp"
        android:hint="@string/username_register_hint" />

    <EditText
        android:id="@+id/password_register"
        android:inputType="textPassword"
        android:background="@drawable/main_edit_text"
        android:textCursorDrawable="@null"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_register"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/password_register_hint"/>

    <EditText
        android:id="@+id/password_register_repeat"
        android:inputType="textPassword"
        android:background="@drawable/main_edit_text"
        android:textCursorDrawable="@null"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_register"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/password_register_repeat_hint"/>

    <TextView
        android:id="@+id/repeat_password_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_register_repeat"
        android:text="@string/user_register_password_warning"
        android:visibility="gone"
        android:textColor="#ff0000"
        android:textSize="12sp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/button_register_done"
        android:layout_width="150dp"
        android:layout_height="50dp"
        style="@style/Theme.Design.Light"
        android:background="@drawable/main_button"
        android:layout_below="@+id/repeat_password_warning"
        android:layout_centerHorizontal="true"
        android:text="@string/register_button_done"
        android:layout_marginBottom="16dp"/>

</RelativeLayout>