<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/username_edit_text"
        android:background="@drawable/main_edit_text"
        android:textCursorDrawable="@null"
        android:padding="6dp"
        android:hint="@string/username_edit_hint"
        android:focusable = "true"
        android:layout_margin="16dp"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/password_edit_text"
        android:background="@drawable/main_edit_text"
        android:textCursorDrawable="@null"
        android:padding="6dp"
        android:hint="@string/password_edit_hint"
        android:focusable = "true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:inputType="textPassword"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/button_login"
            android:background="@drawable/main_button"
            android:layout_centerHorizontal="true"
            android:text="@string/login_button"
            android:layout_marginBottom="16dp"
            android:onClick="onLogin"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/button_register"
            android:background="@drawable/main_button_red"
            android:layout_below="@+id/button_login"
            android:layout_centerHorizontal="true"
            android:text="@string/register_button"
            android:layout_marginBottom="16dp"
            android:onClick="onRegister"/>

    </RelativeLayout>

</LinearLayout>